--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ url: http://jnchen.github.io
 rss_url: /pages/atom.xml
 
 # avatar头像及Favicon
-avatar: http://7u2ho6.com1.z0.glb.clouddn.com/site-avatar.png
-favicon: http://7u2ho6.com1.z0.glb.clouddn.com/site-favicon.ico
+avatar: http://jnchen.github.io/images/avatar.png
+favicon: http://jnchen.github.io/favicon.ico
 
 # google analytics 设置
 #ga:
