--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,10 @@ favicon: http://jnchen.me/images/favicon.ico
 #ga:
 #  id: UA-54767140-1
 #  url: 
-
+# comments 设置
+comments:
+   provider: duoshuo
+   short_name: jnchen
     
 # disqus 设置
 disqus:
