--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ favicon: http://jnchen.me/images/favicon.ico
 #  url: 
 # comments 设置
 comments:
-   provider: duoshuo
+   provider: disqus 
    short_name: jnchen
     
 # disqus 设置
