--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,9 @@ favicon: http://jnchen.me/images/favicon.ico
 #  id: UA-54767140-1
 #  url: 
 # comments 设置
-comments:
-   provider: disqus 
-   short_name: jnchen
+#comments:
+#   provider: disqus 
+#   short_name: jnchen
     
 # disqus 设置
 disqus:
