--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ author:
   name: 曹井琛
   email: 42629624@qq.com
   link: http://jnchen.me
-  weibo: http://weibo.com/caojingchen
+  weibo: http://weibo.com/2474248215
   github: http://github.com/jnchen
 
 # 站点信息
