--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 permalink: /:year/:month/:day/:title.html
-markdown: kramdown
-pygments: true
+markdown: redcarpet
+redcarpet:
+    extensions: [ "fenced_code_blocks", "hard_wrap","autolink", "tables", "strikethrough", "superscript", "with_toc_data", "highlight", "prettify","no_intra_emphasis"]
+
 
 kramdown:
   input: GFM
