--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 permalink: /:year/:month/:day/:title.html
 
-markdown: kramdown
+markdown: readcarpet
 
-#redcarpet:
-#    extensions: [ "fenced_code_blocks", "hard_wrap","autolink", "tables", "strikethrough", "superscript", "with_toc_data", "highlight", "prettify","no_intra_emphasis"]
+redcarpet:
+    extensions: [ "fenced_code_blocks", "hard_wrap","autolink", "tables", "strikethrough", "superscript", "with_toc_data", "highlight", "prettify","no_intra_emphasis"]
 
 pygments:
     true
