--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,12 @@
 permalink: /:year/:month/:day/:title.html
 
-markdown: readcarpet
+pygments: true
 
+markdown: readcarpet
 redcarpet:
     extensions: [ "fenced_code_blocks", "hard_wrap","autolink", "tables", "strikethrough", "superscript", "with_toc_data", "highlight", "prettify","no_intra_emphasis"]
 
-pygments:
-    true
-    
-kramdown:
-  input: GFM
+
 
 # 作者信息
 author: 
