--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ permalink: /:year/:month/:day/:title.html
 
 pygments: true
 
-markdown: readcarpet
+markdown: redcarpet
 redcarpet:
     extensions: [ "fenced_code_blocks", "hard_wrap","autolink", "tables", "strikethrough", "superscript", "with_toc_data", "highlight", "prettify","no_intra_emphasis"]
 
